@startuml Lexer classes
enum BasicTokenType {
    LET,
    PRINT,
    INPUT,
    IF,
    GOTO,
    GOSUB,
    RETURN,
    REM,
    RUN,
    THEN,
    END,
    EXIT,
    VAR,
    CLEAR,
    INT_LITERAL,
    IDENTIFIER,
    ASSIGN,
    COMMA,
    PLUS,
    MINUS,
    MUL,
    DIV,
    LOWER,
    GREATER,
    STRING_LITERAL,
    LPAREN,
    RPAREN,
}

class BasicToken {
    - typ: BasicTokenType
    - sval: std::string
    - ival: unsigned long int
    + BasicToken(typ: BasicTokenType): BasicToken
    + to_string(): std::string
}

class BasicLexer {
    - remaining: std::string
    - column: int = 0
    'console for error reporting
    - console: BasicConsole&
    - err: bool = false
    + BasicLexer(console: BasicConsole&, str: const std::string&): BasicLexer
    + hasError(): bool
    + next_char(): int
    + ret_char(c: char): void
    + empty(): bool
    + run(): void
    + printErr(c: char): void
    + lex_ident(c: char): BasicToken
    + lex_int_literal(c: char): BasicToken
    + lex_string_literal(): BasicToken
    + check_keyword(token: BasicToken&): void
    + check_identifier(token: BasicToken&): void
}

BasicToken o-- BasicTokenType
BasicLexer o-- BasicConsole
BasicLexer o-- BasicToken

@enduml
